--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="top-banner flexible container">
         <div class="half-width">
-            <h1 class="orange-color"><span>Skip</span> The Diet,</h1>
+            <h1 class="orange-color"><span>Skip</span>The Diet,</h1>
             <h1>Just Eat Healthy With </h1>
             <h1>Healthy Food Network</h1>
             <P>Image you dont need a diet because we provide healthy and delicious food for you.</P>
@@ -35,23 +35,24 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sraisa/">Contact Me</a>
         </div>
     </section>
-    <section class="Experience-area">
-        <h1> My Reciipes </h1>
+    <section class="recipe-area">
+        <h1> My Recipies </h1>
         <P>You can get the healthy and delicious resipe here</P>
-        <div class="flexible-container">
-            <div id="recipe-title" class="experience-item">
-                <h2> Recipe Title</h2>
-                <p>You can find the healthy and delicious resipe here</p>
-                <img src="images/food/Project Cover1.jpg" alt="">
-            </div>
-            <div id="recipe-titles" class=experience-item>
-                <h2>Recipe Title</h2>
-                <p>I am the junior web developer.I am ffeicient and dovoted to my work.</p>
-                <img src="images/food/Project Cover1.jpg" alt="">
-            </div>
+        <div>
             <div class="flexible-container">
-
+                <div id="recipe-title" class="experience-item">
+                    <img src="images/food/Project Cover1.jpg" alt="">
+                    <h2> Recipe Title</h2>
+                    <p>You can find the healthy and delicious resipe here</p>
+                </div>
+                <div id="recipe-titles" class="experience-item">
+                    <img src="images/food/Project Cover1.jpg" alt="">
+                    <h2>Recipe Title</h2>
+                    <p>You can find the healthy and delicious resipe here</p>
+                </div>
             </div>
+
+        </div>
     </section>
 </body>
 
