--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
 
         </div>
     </section>
+    <section>
+        <div class="card1">
+            <div class="youtube">
+                <b>700K</b>
+                <p>YouTube Subscriber</p>
+            </div>
+            <div class="youtube">
+                <b>500K</b>
+                <p>Facebook Subscriber</p>
+            </div>
+            <div class="youtube">
+                <b>200K</b>
+                <p>Instagram Subscriber</p>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 
